fix: Set body background transparent to show blurred background, show on all pages

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -69,7 +69,7 @@ html {
 }
 
 body {
-  background-color: var(--color-background);
+  background-color: transparent;
   color: var(--color-text);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
